cmake_minimum_required(VERSION 3.27)
project(CPP_Primer_Plus_Chapter_6)

set(CMAKE_CXX_STANDARD 17)

add_executable(CPP_Primer_Plus_Chapter_6 main.cpp
        head.h
        #        Code/06_01_if.cpp
        #        Code/06_02_ifelse.cpp
        #        Code/06_03_ifelseif.cpp
        #        Code/06_04_or.cpp
        #        Code/06_05_and.cpp
#        Code/06_06_more_and.cpp
#        Code/06_07_not.cpp
#        Code/06_08_cctypes.cpp
        Code/06_09_condit.cpp
        Code/09_10_switch.cpp
)
