cmake_minimum_required(VERSION 3.27)
project(CPP_Primer_Plus_Chapter_6)

set(CMAKE_CXX_STANDARD 17)

add_executable(CPP_Primer_Plus_Chapter_6 main.cpp
        head.h
#        Code/06_01_if.cpp
#        Code/06_02_ifelse.cpp
#        Code/06_03_ifelseif.cpp
#        Code/06_04_or.cpp
#        Code/06_05_and.cpp
#        Code/06_06_more_and.cpp
#        Code/06_07_not.cpp
#        Code/06_08_cctypes.cpp
#        Code/06_09_condit.cpp
#        Code/06_10_switch.cpp
#        Code/06_11_enum.cpp
#        Code/06_12_jump.cpp
#        Code/06_13_cinFish.cpp
#        Code/06_14_cinGolf.cpp
#        Code/06_15_outFile.cpp
        Code/06_16_sumFile.cpp
#        Practice/06_01.cpp
#        Practice/06_02.cpp
#        Practice/06_03.cpp
#        Practice/06_04.cpp
#        Practice/06_05.cpp
#        Practice/06_06.cpp
#        Practice/06_07.cpp
        Practice/06_08.cpp
        Practice/06_09.cpp
)
